--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,8 +20,8 @@ jobs:
     - name: Build with Gradle
       run: |
         chmod +x gradlew
-        ./gradlew :server:build
-        ./gradlew :cli:build -PAPI_BASE_URL=${{ secrets.API_BASE_URL }}
+        ./gradlew :server:build -DGOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+        ./gradlew :cli:build -DAPI_BASE_URL=${{ secrets.API_BASE_URL }} -DGOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
