fixed issue with env variables

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -26,7 +26,7 @@ security:
     token-validity-in-seconds: 86400
   oauth2:
     google:
-      client-id: ${GOOGLE_CLIENT_ID:your_google_client_id}
+      client-id: ${GOOGLE_CLIENT_ID:731870641465-2m1plh852jj6rubpq403i8cjs7521k2u.apps.googleusercontent.com}
 
 logging:
   level:
