--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -22,6 +22,15 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+processResources {
+    filesMatching("application.yml") {
+        expand([
+                API_BASE_URL:project.findProperty("API_BASE_URL") ?: "http://localhost:8080/api",
+                GOOGLE_CLIENT_ID:project.findProperty("GOOGLE_CLIENT_ID" ?: "731870641465-2m1plh852jj6rubpq403i8cjs7521k2u.apps.googleusercontent.com")
+        ])
+    }
+}
+
 bootJar {
     archiveFileName = 'taskmanagement-cli.jar'
 }
