--- a/cli/src/main/resources/application.yml
+++ b/cli/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
 
 cli:
   api:
-    base-url: ${API_BASE_URL:http://localhost:8080/api}
+    base-url: ${API_BASE_URL}
   auth:
     google:
-      client-id: ${GOOGLE_CLIENT_ID:your_google_client_id}
+      client-id: ${GOOGLE_CLIENT_ID}
 
 spring.shell:
   command:
