--- a/cli/gradle.properties
+++ b/cli/gradle.properties
@@ -1,2 +1,2 @@
 API_BASE_URL=http://localhost:8080/api
-GOOGLE_CLIENT_ID=731870641465-2m1plh852jj6rubpq403i8cjs7521k2u.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=placheholder
