--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,11 +17,6 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     
-    - name: Build with Gradle
-      run: |
-        chmod +x gradlew
-        ./gradlew clean build -PAPI_BASE_URL=${{ secrets.API_BASE_URL }} -PGOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -PJWT_SECRET=${{ secrets.JWT_SECRET }}
-    
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
@@ -42,7 +37,21 @@ jobs:
           -var="db_username=${{ secrets.DB_USERNAME }}" \
           -var="db_password=${{ secrets.DB_PASSWORD }}" \
           -var="google_client_id=${{ secrets.GOOGLE_CLIENT_ID }}"
-    
+
+    - name: Get ALB DNS Name
+      id: get_alb_dns
+      run: |
+        cd infrastructure/terraform
+        ALB_DNS=$(terraform output -raw alb_dns_name)
+        echo "alb_dns=$ALB_DNS" >> $GITHUB_ENV
+        echo "API_BASE_URL=http://$ALB_DNS/api" >> $GITHUB_ENV
+        echo "ALB DNS is: $ALB_DNS"
+
+    - name: Build with Gradle
+      run: |
+        chmod +x gradlew
+        ./gradlew build -PAPI_BASE_URL=$API_BASE_URL -PGOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -PJWT_SECRET=${{ secrets.JWT_SECRET }}
+
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
