--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -26,7 +26,7 @@ processResources {
     filesMatching("application.yml") {
         expand([
                 API_BASE_URL:project.findProperty("API_BASE_URL") ?: "http://localhost:8080/api",
-                GOOGLE_CLIENT_ID:project.findProperty("GOOGLE_CLIENT_ID" ?: "731870641465-2m1plh852jj6rubpq403i8cjs7521k2u.apps.googleusercontent.com")
+                GOOGLE_CLIENT_ID:project.findProperty("GOOGLE_CLIENT_ID") ?: "731870641465-2m1plh852jj6rubpq403i8cjs7521k2u.apps.googleusercontent.com"
         ])
     }
 }
