Fixing endpoint error

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,8 +52,8 @@ jobs:
       run: |
         cd infrastructure/terraform
         DB_ENDPOINT=$(terraform output -raw db_endpoint)
-        echo "DB endpoint is: $DB_ENDPOINT/taskmanagement"
-        echo "db_endpoint=$DB_ENDPOINT/taskmanagement" >> $GITHUB_ENV
+        echo "DB endpoint is: $DB_ENDPOINT"
+        echo "db_endpoint=$DB_ENDPOINT" >> $GITHUB_ENV
 
     - name: Run Flyway Migration
       run: |
@@ -66,7 +66,7 @@ jobs:
     - name: Build with Gradle
       run: |
         chmod +x gradlew
-        ./gradlew build -PAPI_BASE_URL=$API_BASE_URL -PGOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -PJWT_SECRET=${{ secrets.JWT_SECRET }} -PDB_USERNAME=${{ secrets.DB_USERNAME }} -PDB_PASSWORD=${{ secrets.DB_PASSWORD }} -PDB_CONNECTION_STRING=$db_endpoint
+        ./gradlew build -PAPI_BASE_URL=$API_BASE_URL -PGOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -PJWT_SECRET=${{ secrets.JWT_SECRET }} -PDB_USERNAME=${{ secrets.DB_USERNAME }} -PDB_PASSWORD=${{ secrets.DB_PASSWORD }} -PDB_CONNECTION_STRING=$db_endpoint/taskmanagement
 
     - name: Login to Amazon ECR
       id: login-ecr
