--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 
 dependencies {
+    implementation 'org.springframework.security:spring-security-core'
+    implementation 'org.springframework.security:spring-security-web'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     
@@ -18,7 +20,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'com.google.api-client:google-api-client:2.2.0'
-    
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
