--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 flyway {
     url = 'jdbc:postgresql://localhost:5432/taskmanagement'
     user = 'postgres'
-    password = 'admin'
+    password = 'Thandeka22'
     baselineOnMigrate = true
 }
 
