--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/taskmanagement
     username: postgres
-    password: Thandeka22
+    password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
